Attempt to fix z-index issue with NavigationMenu at iOS

--- a/src/components/Navigation/NavigationMenu.scss
+++ b/src/components/Navigation/NavigationMenu.scss
@@ -11,7 +11,7 @@
 
   &.nav-open {
     opacity: 1;
-    z-index: 2;
+    z-index: 5;
   }
 
   .container {
