--- a/src/sass/global/_common.scss
+++ b/src/sass/global/_common.scss
@@ -14,14 +14,7 @@ body {
 
   &.nav-open {
     overflow: hidden;
-    max-height: 100vh;
-
-    #app {
-      &:before {
-        opacity: 0.7;
-        z-index: 4;
-      }
-    }
+    height: 100vh;
   }
 }
 
@@ -34,11 +27,11 @@ body {
 }
 
 .header {
-  z-index: 3;
+  z-index: 5;
 }
 
 nav.navigation {
-  z-index: 2;
+  z-index: 4;
 }
 
 main {
